examples/test/testpolicy14409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14409
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key19: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value12
          key38: value29
          key26: value24
      podSelector:
        matchLabels:
          key5: value46
          key11: value14
          key47: value24
